# ocetrac_cmip6

./: README.md  environment.yml  setup.cfg  setup.py
.github/workflows/: release.yaml  test.yaml
ci/: environment-py3.7.yml  environment-py3.8.yml
docs/: api.rst  conf.py  environment.yml  index.rst
notebooks/: testing.ipynb
tests/: test_dummy.py
